infra/k8s/delivery-depm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
      - name: delivery
        image: fazidsamoon/ds-delivery
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-srv
spec:
  selector:
    app: delivery
  ports:
    - name: delivery
      protocol: TCP
      port: 3003
      targetPort: 3003
