infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: fazidsamoon/ds-order
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3002
      targetPort: 3002
