infra/k8s/rating.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: fazidsamoon/ds-rating
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rating-srv
spec:
  selector:
    app: rating
  ports:
    - name: rating
      protocol: TCP
      port: 3004
      targetPort: 3004
