infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/product/?(/*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 3001
          - path: /api/order/?(/*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 3002
          - path: /api/delivery/?(/?)
            pathType: Prefix
            backend:
              service:
                name: email-srv
                port:
                  number: 3003
          - path: /api/email/?(/?)
            pathType: Prefix
            backend:
              service:
                name: email-srv
                port:
                  number: 3009
